argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # ArgoCD는 기본이 HTTPS라 백엔드로 보낼 때 HTTPS로 보내야 함
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # SSL 통과 설정
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
